# RPI-install

./: Dockerfile  README.md  rpi-installation.sh
src/: Makefile  file-listener  file-listener.h  index.html  main.c  main.carbon
src/lib/: Cargo.toml
src/lib/src/: lib.rs
