[lib]
proc-macro = true
name = "rust_file_listener"
crate-type = ["staticlib", "cdylib"]

[package]
name = "rust-file-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies]
rust-ini = "0.18"
error-chain = "0.12.4"
